<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IE Manager</string>
    <string name="export_label">Export</string>
    <string name="main_export">Exporter</string>
    <string name="main_import">Importer</string>
    <string name="import_exit">Exit</string>
    <string name="import_account_label">Create contacts under account:</string>
    <string name="empty_label">Click to pick!!!</string>
    <string name="import_button_start_text">Import</string>
    <string name="import_button_exit_text">Back</string>
    <string name="import_check"></string>
    <string name="import_synchronize_account">Accounts to synchronize with:</string>
    <string name="export_type">Export Type:</string>
    <string name="exportOptionsLabel">Choose which Fields to Export:</string>
    <string name="export_type_label">Export type:</string>
    <string name="back_label">Back</string>
    <string name="look_up_account_label">Exported Contacts Accounts:</string>
    <string name="dialog_synchronize_contacts_label">Do you want synchronize contacts</string>
    <string name="export_file_name_label">File Name:</string>
    <string name="file_label_textView">Import File Name:</string>
    <string name="exit_button_label">EXIT</string>
    <string name="synchronize_synchronize_label">SYNC</string>
    <string name="synchronize_next_label">NEXT</string>
    <string name="android_label">Phone Contact</string>
    <string name="csv_label">CSV Contact</string>
    <string name="synch_name">Name</string>
    <string name="synch_organization">Organization</string>
    <string name="synch_phone">Phone Numbers</string>
    <string name="synch_emails">Email Addresses</string>
    <string name="synch_addresses">Address</string>
    <string name="sycnh_webPage">WebPages</string>
    <string name="synch_notes">Notes</string>
    <string name="synchr_nickname">NickName</string>
    <string name="synch_im_label">IM</string>
    <string name="dir_label">Folder:</string>
    <string name="file_explorer_label">File Android Explorer</string>
    <string name="my_explorer">IE Manager Explorer</string>
    <string name="file_name_label">Name:</string>
    <string name="import_address_label">Sync Address based on:</string>
    <string name="synch_options_min_fields_label">Min Match to Sync Contact:</string>
    <string name="type_of_matching">Type Of Match:</string>
    <string name="removeAccentsLabel">Remove Accents</string>
    <string name="encoding_typ_label">Encoding type:</string>
    <string name="export_only_witch_fits_string">Fields only which fits</string>
    <string name="export_string">Export</string>
    <string name="new_contact_label_button">NEW</string>
</resources>