<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_export_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_export" android:textSize="20dp"/>

    <Button
        android:id="@+id/main_import_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_import" android:textSize="20dp"/>

    <Button
        android:id="@+id/main_exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/exit_button_label" 
        android:textSize="20dp" />

</LinearLayout>